@@ -193,4 +193,5 @@
 #define SONG_NEEDS_BRASS 408	// You need to play a brass instrument for this song
 #define NO_INSTRUMENT_SKILL 269	// "Stick to singing until you learn to play this instrument."
 #define IN_USE 1406	// "Someone else is using that.  Try again later."
+#define DUP_LORE 290 // "Duplicate lore items are not allowed." 
 #endif
