@@ -86,14 +86,12 @@ bool Client::CheckLoreConflict(const Item_Struct* item) {
 		return false;
 	if (!(item->LoreFlag))
 		return false;
-	
-	if (m_inv.HasItem(item->ID) != SLOT_INVALID)
-		return true;
 
-	//Finally, if the item has a lore group, we check for other items with the same group and return the result
-	if (item->LoreGroup == 0 || item->LoreGroup == -1) 
-		return false;	
-	return (m_inv.HasItemByLoreGroup(item->LoreGroup) != SLOT_INVALID);
+	if (item->LoreGroup == -1)	// Standard lore items; look everywhere except the shared bank, return the result
+		return (m_inv.HasItem(item->ID, 0, ~invWhereSharedBank) != SLOT_INVALID);	
+
+	//If the item has a lore group, we check for other items with the same group and return the result
+	return (m_inv.HasItemByLoreGroup(item->LoreGroup, ~invWhereSharedBank) != SLOT_INVALID);
 }
 
 void Client::SummonItem(uint32 item_id, sint8 charges, uint32 aug1, uint32 aug2, uint32 aug3, uint32 aug4, uint32 aug5) {
