@@ -300,7 +300,7 @@ int Parser::HasQuestFile(int32 npcid)
 return true;
 }
 
-void Parser::Event(QuestEventID event, int32 npcid, const char * data, NPC* npcmob, Mob* mob) {
+void Parser::Event(QuestEventID event, int32 npcid, const char * data, NPC* npcmob, Mob* mob, int32 extradata) {
 	if (npcid == 0)
 		return;
 	if(event >= _LargestEventID)
